# kisaweb

./: .coveragerc  .drone.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  LICENSE  Pipfile  README.md  doc_example.md  docker-compose.base.yml  docker-compose.pre.yml  docker-compose.prod.yml  docker-compose.yml  env.dev  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  sitemap.xml
backend/: dockerfile.backend  mypy.ini  pyproject.toml  requirements.old.txt  requirements.txt
backend/aboutus/: admin.py  models.py  serializers.py  urls.py  views.py
backend/aboutus/migrations/: 0001_initial.py  0002_alter_basecontent_desc.py  0002_auto_20231111_1044.py  0003_alter_basecontent_id_alter_basemember_id.py
backend/aboutus/templatetags/: member_tags.py
backend/alumni/: admin.py  urls.py  views.py
backend/alumni/migrations/: 0001_initial.py  0002_alter_alumni_id_alter_kisa_position_id.py
backend/alumni/templates/: alumni_base.html
backend/auth_mem/: apps.py  decorators.py  models.py  tests.py  urls.py  utils.py  views.py
backend/auth_mem/migrations/: 0001_initial.py
backend/blog/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/blog/migrations/: 0001_initial.py  0002_post_description_post_new_content.py  0003_auto_20210119_0955.py  0009_post_descr_truncate_num.py  0011_remove_post_descr_truncate_num.py  0013_remove_post_author.py  0014_auto_20210513_1617.py  0017_auto_20210711_1724.py  0018_auto_20210711_1742.py  0019_alter_post_id_alter_posttag_id.py
backend/core/: admin.py  context_processors.py  exceptions.py  models.py  throttling.py  urls.py  utils.py  views.py
backend/core/fixtures/: Footer.json  NavBar.json  misc.json
backend/core/migrations/: 0001_initial.py  0004_remove_footer_email_remove_footer_fb_link_and_more.py
backend/core/schemas/: NavBarT
backend/docs/source/: conf.py  index.rst
backend/election/: admin.py  expression_parser.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/election/migrations/: 0001_initial.py  0002_alter_candidate_election_and_more.py  0002_alter_candidate_slug.py  0005_auto_20220111_0606.py  0006_auto_20220118_1620.py  0007_auto_20220120_1422.py  0008_auto_20220120_1707.py  0009_auto_20220120_1710.py  0012_auto_20221119_0153.py  0014_alter_candidate_id_alter_election_id_alter_voter_id.py
backend/events/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/events/migrations/: 0001_initial.py  0002_event_participants.py  0003_auto_20210502_0227.py  0004_alter_event_id.py
backend/events/templatetags/: events_tags.py
backend/faq/: admin.py  serializers.py  urls.py  views.py
backend/faq/migrations/: 0001_initial.py  0002_alter_category_id_alter_faq_id.py
backend/important_links/: apps.py  serializers.py  urls.py  views.py
backend/important_links/migrations/: 0001_initial.py  0003_auto_20220312_2229.py  0004_alter_link_id_alter_linkcategory_id.py
backend/multimedia/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/sso/: __init__.py  admin.py  apps.py  decorators.py  middleware.py  models.py  permissions.py  tests.py  urls.py  utils.py  views.py
backend/url_shortener/: admin.py  forms.py  models.py  urls.py  views.py
backend/web/: env.py  settings.py  urls.py  wsgi.py
(+1517 files in other folders)
